force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Application No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>