force-app/main/default/objects/Application__c/fields/CheckInStoreName__c.field-meta.xml
<CustomField>
    <fullName>CheckInStoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In Store Name</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Request_CheckInShop</relationshipName>
    <type>Lookup</type>
</CustomField>