force-app/main/default/objects/Application__c/fields/CheckOutStoreName__c.field-meta.xml
<CustomField>
    <fullName>CheckOutStoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Out Store Name</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Request_CheckOutShop</relationshipName>
    <type>Lookup</type>
</CustomField>