force-app/main/default/objects/Application__c/fields/FirstApprover__c.field-meta.xml
<CustomField>
    <fullName>FirstApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>