force-app/main/default/objects/Application__c/fields/FourthApprover__c.field-meta.xml
<CustomField>
    <fullName>FourthApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>