force-app/main/default/objects/Application__c/fields/LastDay__c.field-meta.xml
<CustomField>
    <fullName>LastDay__c</fullName>
    <label>Last Day</label>
    <type>Date</type>
</CustomField>