force-app/main/default/objects/Application__c/fields/LeaveType__c.field-meta.xml
<CustomField>
    <fullName>LeaveType__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>