force-app/main/default/objects/Application__c/fields/OwnerUsername__c.field-meta.xml
<CustomField>
    <fullName>OwnerUsername__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerUsername</label>
    <type>Text</type>
</CustomField>