force-app/main/default/objects/Application__c/fields/RefillCheckInTime__c.field-meta.xml
<CustomField>
    <fullName>RefillCheckInTime__c</fullName>
    <label>Refill Check In Time</label>
    <type>Time</type>
</CustomField>