force-app/main/default/objects/Application__c/fields/RefillCheckOutTime__c.field-meta.xml
<CustomField>
    <fullName>RefillCheckOutTime__c</fullName>
    <label>Refill Check Out Time</label>
    <type>Time</type>
</CustomField>