force-app/main/default/objects/Application__c/fields/SecondApprover__c.field-meta.xml
<CustomField>
    <fullName>SecondApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_SecondApprover</relationshipName>
    <type>Lookup</type>
</CustomField>