force-app/main/default/objects/Application__c/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Id</field>
            <operation>notEqual</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Successor</relationshipName>
    <type>Lookup</type>
</CustomField>