force-app/main/default/objects/Application__c/fields/ThirdApprover__c.field-meta.xml
<CustomField>
    <fullName>ThirdApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_ThirdApprover</relationshipName>
    <type>Lookup</type>
</CustomField>