force-app/main/default/objects/Application__c/fields/TransferStore__c.field-meta.xml
<CustomField>
    <fullName>TransferStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Request_TransferStore</relationshipName>
    <type>Lookup</type>
</CustomField>