force-app/main/default/objects/Application__c/recordTypes/AdditionalCheckInOut.recordType-meta.xml
<RecordType>
    <fullName>AdditionalCheckInOut</fullName>
    <active>true</active>
    <label>Additional Check-In/Out</label>
</RecordType>