force-app/main/default/objects/Application__c/recordTypes/Leave.recordType-meta.xml
<RecordType>
    <fullName>Leave</fullName>
    <active>true</active>
    <label>Leave</label>
</RecordType>