force-app/main/default/objects/Application__c/recordTypes/Resignation.recordType-meta.xml
<RecordType>
    <fullName>Resignation</fullName>
    <active>true</active>
    <label>Resignation</label>
</RecordType>