force-app/main/default/objects/Application__c/recordTypes/TransferStore.recordType-meta.xml
<RecordType>
    <fullName>TransferStore</fullName>
    <active>true</active>
    <label>Transfer Store</label>
</RecordType>