force-app/main/default/objects/Application__c/listViews/Additional_check_in_out.listView-meta.xml
<ListView>
    <fullName>Additional_check_in_out</fullName>
    <columns>NAME</columns>
    <columns>CheckDate__c</columns>
    <columns>CheckInStoreName__c</columns>
    <columns>RefillCheckInTime__c</columns>
    <columns>CheckOutStoreName__c</columns>
    <columns>RefillCheckOutTime__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>FirstApprover__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.AdditionalCheckInOut</value>
    </filters>
    <label>My Additional check-in/out</label>
</ListView>