force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CheckDate__c</columns>
    <columns>CheckInStoreName__c</columns>
    <columns>CheckOutStoreName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>