force-app/main/default/objects/Application__c/listViews/My_Leave.listView-meta.xml
<ListView>
    <fullName>My_Leave</fullName>
    <columns>NAME</columns>
    <columns>LeaveType__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Reason__c</columns>
    <columns>FirstApprover__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Leave</value>
    </filters>
    <label>My Leave</label>
</ListView>