force-app/main/default/objects/Application__c/listViews/My_Transfer_Store.listView-meta.xml
<ListView>
    <fullName>My_Transfer_Store</fullName>
    <columns>NAME</columns>
    <columns>TransferStore__c</columns>
    <columns>LastDay__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Successor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.TransferStore</value>
    </filters>
    <label>My Transfer Store</label>
</ListView>